--- a/polkadot-sdk-minimal-template/Cargo.toml
+++ b/polkadot-sdk-minimal-template/Cargo.toml
@@ -6,7 +6,7 @@ repository = "https://github.com/paritytech/polkadot-sdk-minimal-template.git"
 edition = "2021"
 
 [workspace]
-members = [ "cliente","node", "pallets/template", "runtime", "substrate-client"]
+members = ["node", "pallets/template", "runtime"]
 resolver = "2"
 
 [workspace.dependencies]
@@ -21,3 +21,9 @@ polkadot-sdk = { version = "0.7.0", default-features = false }
 serde_json = { version = "1.0.127", default-features = false }
 codec = { version = "3.6.12", default-features = false, package = "parity-scale-codec" }
 scale-info = { version = "2.11.1", default-features = false }
+frame-system = { version = "38.0.0", default-features = false }
+frame-benchmarking = { version = "38.0.0", default-features = false }
+frame-support = { version = "38.0.0", default-features = false }
+sp-core = { version = "34.0.0", default-features = false }
+sp-io = { version = "38.0.0", default-features = false }
+sp-runtime = { version = "39.0.1", default-features = false }
